# advent-of-code

./: README.md
2015/clojure/day1/: .gitignore  project.clj
2015/clojure/day1/src/day1/: core.clj
2015/go/: go.mod
2015/go/day1/: main.go
2015/go/day2/: main.go
2015/ocaml/: .gitignore
2015/ocaml/day1/: day1.opam  dune-project
2015/odin/day1/: day1.odin
2015/rust/day1/src/: main.rs
